# enum_index

./: Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: CI.yml
enum_index/: all.html  derive.EnumIndex.html  enum.EnumIndexError.html  index.html  sidebar-items.js  trait.EnumIndex.html  trait.VariantByName.html
enum_index/errors/: enum.EnumIndexError.html  index.html
enum_index/prelude/: derive.EnumIndex.html  enum.EnumIndexError.html  index.html  sidebar-items.js  trait.EnumIndex.html  trait.VariantByName.html
enum_index/prelude/errors/: index.html  (+1 more)
enum_index/serde/: index.html  trait.Deserialize.html  trait.Deserializer.html  trait.Serialize.html  trait.Serializer.html
enum_index_macros/: Cargo.toml  all.html  derive.EnumIndex.html  index.html  sidebar-items.js
enum_index_macros/src/: func.rs  lib.rs
enum_index_macros/src/structs/: index.rs  mod.rs  params.rs
enum_index_types/: Cargo.toml  all.html  index.html  sidebar-items.js  trait.EnumIndex.html  trait.VariantByName.html
enum_index_types/errors/: enum.EnumIndexError.html  index.html  sidebar-items.js
enum_index_types/serde/: index.html  trait.Deserialize.html  trait.Deserializer.html  trait.Serialize.html  trait.Serializer.html
enum_index_types/src/: errors.rs  lib.rs
src/: lib.rs  main.rs  prelude.rs
src/enum_index/: lib.rs.html  prelude.rs.html
src/enum_index_macros/: func.rs.html  lib.rs.html
src/enum_index_types/: errors.rs.html  lib.rs.html
src/tests/: mod.rs  test_build.rs
tests/: test_build.rs
(+40 files in other folders)
