[package]
name = "enum_index_macros"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "enum_index_macros"
proc-macro = true

[dependencies]
proc-macro2 = { version = "1" }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
enum_index_types = { version = "0", path = "../enum_index_types" }
